--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "node dist/server.js",
+    "build": "tsc",
     "dev": "npx tsx watch ./src/server.ts"
   },
   "keywords": [],
