--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node dist/server.js",
+    "migrate": "prisma migrate deploy", 
     "build": "tsc",
     "dev": "npx tsx watch ./src/server.ts"
   },
